cmake_minimum_required(VERSION 2.6)
PROJECT(LIBFREEFRAMEGL)

SET(CMAKE_CXX_FLAGS "-fno-strict-aliasing ${CMAKE_CXX_FLAGS}" )

IF(UNIX)
    SET(CMAKE_CXX_FLAGS "-fPIC ${CMAKE_CXX_FLAGS}" )
ENDIF(UNIX)

ADD_LIBRARY(FreeFrameGL
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGLPluginInfo.cpp 
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGLPluginInfoData.cpp 
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGL.cpp 
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGLPluginManager.cpp 
    ${FREEFRAMEGL_DIR_PLUGINS}/FFGLPluginSDK.cpp
    ${FREEFRAMEGL_DIR_HOST}/FFGLPluginInstance.cpp
)

